<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewConstraint"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/dispay_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="16dp"
            android:text="@string/zero"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorBlack"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewConstraint"
        app:layout_constraintVertical_weight="5">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/clear"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSeven"
            app:layout_constraintEnd_toStartOf="@+id/btnDivide"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/division"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnClear"
            app:layout_constraintStart_toEndOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/multiply"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnDivide"
            app:layout_constraintStart_toEndOf="@+id/btnDivide" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/delete"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/btnMultiply"
            app:layout_constraintStart_toEndOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/seven"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btnFour"
            app:layout_constraintEnd_toStartOf="@+id/btnEight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/eight"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/btnFive"
            app:layout_constraintEnd_toStartOf="@+id/btnNine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSeven"
            app:layout_constraintTop_toBottomOf="@id/btnDivide" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/nine"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnMinus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnMultiply"
            app:layout_constraintBottom_toTopOf="@id/btnSix"
            app:layout_constraintStart_toEndOf="@+id/btnEight" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/minus"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnDelete"
            app:layout_constraintBottom_toTopOf="@id/btnPlus"
            app:layout_constraintStart_toEndOf="@+id/btnNine" />

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/four"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btnOne"
            app:layout_constraintEnd_toStartOf="@+id/btnFive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSeven" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/five"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnSix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnEight"
            app:layout_constraintBottom_toTopOf="@id/btnTwo"
            app:layout_constraintStart_toEndOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/six"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnNine"
            app:layout_constraintBottom_toTopOf="@id/btnThree"
            app:layout_constraintStart_toEndOf="@+id/btnFive" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/operator_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/plus"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@id/btnEqual"
            app:layout_constraintTop_toBottomOf="@id/btnMinus"
            app:layout_constraintStart_toEndOf="@+id/btnSix" />

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/one"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPercentage"
            app:layout_constraintEnd_toStartOf="@+id/btnTwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFour" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/two"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnThree"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@id/btnZero"
            app:layout_constraintTop_toBottomOf="@id/btnFive"
            app:layout_constraintStart_toEndOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/three"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/btnSix"
            app:layout_constraintBottom_toTopOf="@id/btnDot"
            app:layout_constraintStart_toEndOf="@+id/btnTwo" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/equal_bg"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/equal"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/btnThree"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnThree" />

        <Button
            android:id="@+id/btnPercentage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/percentage"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnZero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnOne" />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btnDot"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTwo"
            app:layout_constraintStart_toEndOf="@+id/btnPercentage" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="monospace"
            android:text="@string/dot"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@id/btnEqual"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnThree"
            app:layout_constraintStart_toEndOf="@+id/btnZero" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>